# GalactiCombat

./: .gitignore  BaseApplication.cpp  BaseApplication.h  Bullet.cpp  Bullet.h  ClientSpaceShipController.cpp  ComputerSpaceShipController.cpp  ComputerSpaceShipController.h  GUIManager.cpp  GUIManager.h  GalactiCombat.cpp  GalactiCombat.h  GalactiCombat.sln  GalactiCombat.vcxproj  GalactiCombat.vcxproj.filters  GalactiCombatServer.cpp  GalactiCombatServer.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Makefile.am  Mineral.cpp  Mineral.h  NetworkManagerClient.cpp  NetworkManagerClient.h  NetworkUtil.h  OgreMotionState.cpp  OgreMotionState.h  PhysicsSimulator.cpp  PhysicsSimulator.h  README.md  README_VS_Build_Notes.txt  SoundManager.cpp  SoundManager.h  SpaceShip.cpp  SpaceShip.h  UpgradeLog.htm  configure.ac  from_zesen.cpp  (+6 more)
GameServer/: GalactiCombatServer.vcxproj  GalactiCombatServer.vcxproj.filters
media/materials/scripts/: 69_Decal.material  BeamRunnerShip.scene  Blue_Panel_Light.material  Cockpit_Console_2.material  Cockpit_Main_Console.material  Cockpit_Seats.material  Console_Glow.material  Danger_Decal.material  Danger_Decal_Mirrored.material  Dark_Metal.material  Engine_Glow.material  Examples.material  Forward_Facing_Light.material  Fulcrum_Decal_Mirrored.material  Glass_Canopy.material  Main_Hull.material  Metal_Alloy.material  Radar_Screen.material  Radiator_Texture.material  Rear_Glass_Panel.material  Rear_Red_Tail_Lights.material  Red_Diffuse.material  Reg_Plate.material  White_Rear_Light.material  buttons.material  buttons_mirrored.material  lower_buttons.material
src/: BaseApplication.cpp  BaseApplication.h  Bullet.h  ClientSpaceShipController.h  ComputerSpaceShipController.cpp  GUIManager.cpp  GUIManager.h  GalactiCombat.h  GalactiCombatMain.cpp  GalactiCombatServer.cpp  GalactiCombatServer.h  ISpaceShipController.h  Mineral.h  NetworkManagerClient.cpp  NetworkManagerClient.h  NetworkUtil.h  OgreMotionState.cpp  PhysicsSimulator.cpp  SoundManager.cpp
